[project]
name = "pushshift_comment_export"
version = "0.1.4"
description = "Exports all accessible reddit comments for an account using pushshift"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["reddit", "data"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["backoff", "click", "logzero", "requests"]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ps_comments = "pushshift_comment_export.__main__:main"
pushshift_comment_export = "pushshift_comment_export.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/pushshift_comment_export"

[project.optional-dependencies]
testing = ["flake8", "mypy"]

[tool.mypy]
pretty = "True"
show_error_context = "True"
show_error_codes = "True"
check_untyped_defs = "True"
namespace_packages = "True"
disallow_any_generics = "True"
disallow_subclassing_any = "True"
disallow_untyped_calls = "True"
disallow_untyped_defs = "True"
disallow_incomplete_defs = "True"
no_implicit_optional = "True"
warn_redundant_casts = "True"
warn_return_any = "True"
warn_unreachable = "True"

[tool.pytest.ini_options]
addopts = []

[tool.setuptools.packages.find]
include = ["pushshift_comment_export"]
exclude = []
