[project]
name = "pushshift_comment_export"
version = "0.1.4"
description = "Exports all accessible reddit comments for an account using pushshift"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["reddit", "data"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["backoff", "click", "logzero", "requests"]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ps_comments = "pushshift_comment_export.__main__:main"
pushshift_comment_export = "pushshift_comment_export.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/pushshift_comment_export"

[project.optional-dependencies]
testing = ["flake8", "mypy"]

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = []

[tool.setuptools.packages.find]
include = ["pushshift_comment_export"]
exclude = []
